// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/useModel work ok check sample/testLocalModelFail.ts work ok 1`] = `
Array [
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testLocalModelFail.ts",
    "messageText": "Type 'number' is not assignable to type 'string'.",
  },
  Object {
    "category": 1,
    "code": 2554,
    "fileName": "useModelSamples/testLocalModelFail.ts",
    "messageText": "Expected 0 arguments, but got 1.",
  },
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testLocalModelFail.ts",
    "messageText": "Type 'string' is not assignable to type 'number'.",
  },
]
`;

exports[`utils/useModel work ok check sample/testLocalModelOK.ts work ok 1`] = `Array []`;

exports[`utils/useModel work ok check sample/testMMFail.ts work ok 1`] = `
Array [
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testMMFail.ts",
    "messageText": "Type 'number' is not assignable to type 'string'.",
  },
  Object {
    "category": 1,
    "code": 2769,
    "fileName": "useModelSamples/testMMFail.ts",
    "messageText": "No overload matches this call.
  Overload 1 of 3, '(effect: string | Tction<any> | (<P extends Tction<{ username: string; }>>(payload: P[\\"payload\\"]) => P), args: { username: string; }): any', gave the following error.
    Type 'number' is not assignable to type 'string'.
  Overload 2 of 3, '(effect: <P extends Tction<{ username: string; }>>(payload: P[\\"payload\\"]) => P, payload: { username: string; }): any', gave the following error.
    Type 'number' is not assignable to type 'string'.",
  },
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testMMFail.ts",
    "messageText": "Type 'number' is not assignable to type 'string'.",
  },
  Object {
    "category": 1,
    "code": 2554,
    "fileName": "useModelSamples/testMMFail.ts",
    "messageText": "Expected 0 arguments, but got 1.",
  },
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testMMFail.ts",
    "messageText": "Type 'string' is not assignable to type 'number'.",
  },
  Object {
    "category": 1,
    "code": 2339,
    "fileName": "useModelSamples/testMMFail.ts",
    "messageText": "Property 'username2' does not exist on type '{ username: string; }'.",
  },
]
`;

exports[`utils/useModel work ok check sample/testMMOK.ts work ok 1`] = `Array []`;

exports[`utils/useModel work ok check sample/testUseModelFail.ts work ok 1`] = `
Array [
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testUseModelFail.ts",
    "messageText": "Type 'number' is not assignable to type 'string'.",
  },
  Object {
    "category": 1,
    "code": 2554,
    "fileName": "useModelSamples/testUseModelFail.ts",
    "messageText": "Expected 0 arguments, but got 1.",
  },
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testUseModelFail.ts",
    "messageText": "Type 'string' is not assignable to type 'number'.",
  },
  Object {
    "category": 1,
    "code": 2339,
    "fileName": "useModelSamples/testUseModelFail.ts",
    "messageText": "Property 'id' does not exist on type '{ username: string; }'.",
  },
  Object {
    "category": 1,
    "code": 2322,
    "fileName": "useModelSamples/testUseModelFail.ts",
    "messageText": "Type 'string' is not assignable to type 'number'.",
  },
]
`;

exports[`utils/useModel work ok check sample/testUseModelOK.ts work ok 1`] = `Array []`;
